<?xml version="1.0"?>
<package format="2">
  <name>diagnostic_aggregator_example</name>
  <version>0.0.1</version>
  <description>The diagnostic_aggregator_example package</description>

  <maintainer email="nlamprian@gmail.com">Nick Lamprianidis</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pluginlib</depend>
  <depend>xmlrpcpp</depend>
  <depend>roscpp</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_aggregator</depend>

  <export>
    <diagnostic_aggregator plugin="${prefix}/analyzer_plugins.xml"/>
  </export>
</package>
